--- a/objectprofile/index.html
+++ b/objectprofile/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Quote Generator</title>
+    <title>User Profiles</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Random Quote Generator</h1>
-    <p id="quote">Message Appears Here</p>
-    <p id="author"></p>
-    <button id="new-quote">Motivation</button>     
+    <h1>User Profiles</h1>
+    <div id="user-cards-container" class="cards-container"></div>
     <script src="main.js"></script>
 </body>
 </html>
