--- a/flexboximage/index.html
+++ b/flexboximage/index.html
@@ -9,15 +9,14 @@
 <body>
     <h1>Image Gallery</h1>
     <div class="gallery">
-        <img src="https://via.placeholder.com/150" alt="Image 1" class="gallery-item">
-        <img src="https://via.placeholder.com/150" alt="Image 2" class="gallery-item">
-        <img src="https://via.placeholder.com/150" alt="Image 3" class="gallery-item">
-        <img src="https://via.placeholder.com/150" alt="Image 4" class="gallery-item">
-        <img src="https://via.placeholder.com/150" alt="Image 5" class="gallery-item">
-        <img src="https://via.placeholder.com/150" alt="Image 6" class="gallery-item">
+        <img src="https://images.pexels.com/photos/164634/pexels-photo-164634.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Image 1" class="gallery-item">
+        <img src="https://images.pexels.com/photos/120049/pexels-photo-120049.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Image 2" class="gallery-item">
+        <img src="https://images.pexels.com/photos/337909/pexels-photo-337909.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Image 3" class="gallery-item">
+        <img src="https://images.pexels.com/photos/70912/pexels-photo-70912.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Image 4" class="gallery-item">
+        <img src="https://images.pexels.com/photos/919073/pexels-photo-919073.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Image 5" class="gallery-item">
+        <img src="https://images.pexels.com/photos/244206/pexels-photo-244206.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Image 6" class="gallery-item">
     </div>
 
-    <!-- Modal -->
     <div id="modal" class="modal">
         <span class="close">&times;</span>
         <img class="modal-content" id="modal-image">
