--- a/randomquote/index.html
+++ b/randomquote/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Random Quote Generator</h1>
-    <p id="quote">Message Appears Here</p>
+    <h1>Random Quote Generator</h1> 
+    <p id="quote">Message</p>
     <p id="author"></p>
-    <button id="new-quote">Motivation</button>     
+    <button id="new-quote">Get Quote</button>
     <script src="main.js"></script>
 </body>
 </html>
